--- a/index.html
+++ b/index.html
@@ -5,108 +5,168 @@
   <link 
     rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css.css">
   <link rel="stylesheet" href="src/css/gridstack.css">
+
+  <link rel="stylesheet" href="css.css">
+  <link rel="stylesheet" href="src/css/fonts.css">
 </head>
 <body>
-
-  <div id="banner" class="jumbotron">
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
     <div class="container">
-      <h1 class="display-1">Bli klokere med Dashboard!</h1>
-      <h3><small>&nbsp;Få innsikt i din bedrift. Gjør smartere valg.</small></p>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">Navbar</a>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
+  <div class="triangle">
+    <div id="banner" class="jumbotron">
+      <div class="container">
+        <h1 class="display-1">Bli klokere med Dashboard!</h1>
+        <h3><small>Få innsikt i din bedrift. Gjør smartere valg.</small></h3>
+      </div>
+    </div>
+
+    <section id="mb-container" class="container clearfix">
+
+      <img id="mb-top" src="img/mb-full.png">
+      
+      <!-- action happens here -->
+      <section id="mb-inner-container">
+        <h3><small>Velkommen til ditt Dashboard, du!</small></h3>
+        <div class="btn-group m-b-15" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary btn-sm">Fra dato</button>
+          <button type="button" class="btn btn-secondary btn-sm">Til dato</button>
+          <button type="button" class="btn btn-secondary btn-sm">Hurtigvalg</button>
+        </div>
+
+        <div class="btn-group m-b-15 pull-right" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-secondary btn-sm"><span class="fa fa-cog"></span> Gjør endringer</button>
+          <button type="button" class="btn btn-secondary btn-sm"><span class="fa fa-desktop"></span> Gå til fullskjerm</button>
+        </div>
+
+        <div class="grid-stack">
+          <div id="redBox" class="grid-stack-item"
+              data-gs-x="0" data-gs-y="0"
+              data-gs-width="4" data-gs-height="1">
+            <div class="grid-stack-item-content">
+              <div class="mb-box redBox text-center">
+                Ditt
+              </div>
+            </div>
+          </div>
+
+          <div id="greenBox" class="grid-stack-item"
+              data-gs-x="4" data-gs-y="0"
+              data-gs-width="4" data-gs-height="1">
+            <div class="grid-stack-item-content">
+              <div class="mb-box greenBox text-center">
+                eget
+              </div>
+            </div>
+          </div>
+
+          <div id="grayBox" class="grid-stack-item"
+              data-gs-x="8" data-gs-y="0"
+              data-gs-width="4" data-gs-height="1">
+            <div class="grid-stack-item-content">
+              <div class="mb-box grayBox text-center">
+                dashboard
+              </div>
+            </div>
+          </div>
+
+          <div id="graph" class="grid-stack-item"
+              data-gs-x="0" data-gs-y="1"
+              data-gs-width="8" data-gs-height="3">
+            <div class="grid-stack-item-content">
+              <div class="card">
+                <div class="card-header card-sm">
+                  SIDEVISNINGER
+                </div>
+                <div class="card-block">
+                  <img class="widget-img" src="img/widgets/graph.png">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="donut" class="grid-stack-item"
+              data-gs-x="8" data-gs-y="1"
+              data-gs-width="4" data-gs-height="3">
+            <div class="grid-stack-item-content">
+              <div class="card">
+                <div class="card-header card-sm">
+                  SIDEVISNINGER
+                </div>
+                <div class="card-block">
+                  <img class="widget-img" src="img/widgets/donut.png">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
   </div>
 
-
-  <section id="mb-container" class="container">
-    <img id="mb-top" src="img/macbook/mb-top.png">
-    <img id="mb-left" src="img/macbook/mb-left.png">
-
-    <!-- action happens here -->
-    <section id="mb-inner-container">
-      <h3><small>Velkommen til ditt Dashboard, du!</small></h3>
-      <div class="btn-group m-b-15" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-secondary btn-sm">Fra dato</button>
-        <button type="button" class="btn btn-secondary btn-sm">Til dato</button>
-        <button type="button" class="btn btn-secondary btn-sm">Hurtigvalg</button>
+  <div class="container" id="icon-rows">
+    <div class="row">
+      <div class="col">
+        <span class="icon icon-line-graph"></span>
+        <p>Track your stuff</p>
       </div>
 
-      <div class="btn-group m-b-15 pull-right" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-secondary btn-sm"><span class="fa fa-cog"></span> Gjør endringer</button>
-        <button type="button" class="btn btn-secondary btn-sm"><span class="fa fa-desktop"></span> Gå til fullskjerm</button>
+      <div class="col">
+        <span class="icon icon-merge"></span>
+        <p>All in one solution</p>
       </div>
 
-      <div class="grid-stack">
-        <div id="redBox" class="grid-stack-item"
-            data-gs-x="0" data-gs-y="0"
-            data-gs-width="4" data-gs-height="1">
-          <div class="grid-stack-item-content">
-            <div class="mb-box redBox text-center">
-              Ditt
-            </div>
-          </div>
-        </div>
-
-        <div id="greenBox" class="grid-stack-item"
-            data-gs-x="4" data-gs-y="0"
-            data-gs-width="4" data-gs-height="1">
-          <div class="grid-stack-item-content">
-            <div class="mb-box greenBox text-center">
-              eget
-            </div>
-          </div>
-        </div>
-
-        <div id="grayBox" class="grid-stack-item"
-            data-gs-x="8" data-gs-y="0"
-            data-gs-width="4" data-gs-height="1">
-          <div class="grid-stack-item-content">
-            <div class="mb-box grayBox text-center">
-              dashboard
-            </div>
-          </div>
-        </div>
-
-        <div id="graph" class="grid-stack-item"
-            data-gs-x="0" data-gs-y="1"
-            data-gs-width="8" data-gs-height="2">
-          <div class="grid-stack-item-content">
-            <div class="card">
-              <div class="card-header card-sm">
-                SIDEVISNINGER
-              </div>
-              <div class="card-block">
-                <img class="widget-img" src="img/widgets/graph.png">
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="donut" class="grid-stack-item"
-            data-gs-x="8" data-gs-y="1"
-            data-gs-width="4" data-gs-height="2">
-          <div class="grid-stack-item-content">
-            <div class="card">
-              <div class="card-header card-sm">
-                SIDEVISNINGER
-              </div>
-              <div class="card-block">
-                <img class="widget-img" src="img/widgets/donut.png">
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="col">
+        <span class="icon icon-power-plug"></span>
+        <p>plug and play!</p>
       </div>
 
-      <button class="btn btn-primary">Spennende? les mer!</button>
-    </section>
-    <img id="mb-right" src="img/macbook/mb-right.png">
-    <img id="mb-bottom" src="img/macbook/mb-bottom.png">
-  </section>
+      <div class="col">
+        <span class="icon icon-pie-chart"></span>
+        <p>All the pies you can eat</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <span class="icon icon-gauge"></span>
+        <p>Get up to speed with your data</p>
+      </div>
 
-  <section class="jumbotron">
-    <button class="btn btn-success">Kontakt</button>
-  </section>
+      <div class="col">
+        <span class="icon icon-hand"></span>
+        <p>Get hands on experience</p>
+      </div>
+
+      <div class="col">
+        <span class="icon icon-aircraft-take-off"></span>
+        <p>Get your company to new heights</p>
+      </div>
+      
+      <div class="col">
+        <span class="icon icon-tools"></span>
+        <p>Fully customizable dashboard for your needs</p>
+      </div>
+    </div>
+
+    <a href="#" class="btn btn-outline-secondary btn-lg">Get it now!</a>
+  </div>
 
   <script src="src/js/jquery-3.2.0.min.js"></script>
   <script src="src/js/jquery-ui.min.js"></script>
@@ -120,10 +180,12 @@
   <script type="text/javascript">
     $(function () {
       var options = {
-          cellHeight: 80,
-          verticalMargin: 10
+          cellHeight: 40,
+          verticalMargin: 10,
+          maxHeight: '280px'
       };
       $('.grid-stack').gridstack(options);
+
     });
   </script>
 </body>
